Cuarto commit HTML-Css

--- a/Trabajos HTML/Ejercicio 02/index.html
+++ b/Trabajos HTML/Ejercicio 02/index.html
@@ -20,12 +20,10 @@
     <p align="right">Este texto se alineará a la derecha</p>
     <p align="left">Este texto se alineará a la izquierda</p>
     <br>
-    <h2><center>Segundo encabezado</center></h2>
+    <h2><center>Segundo Encabezado</center></h2>
     <p align="right"><i>Este texto se alineará a la derecha en italica</i></p>
     <br>
-    <p><b>Parrafo en negrita</b></p>
-    <br>
-    <p><i><b>Lista Ordenada</b></i></p>
+    <p><i><b>Lista Por Orden Alfabetico(en negrita)</b></i></p>
 
     <ol type="A">
         <li>Letra A</li>
