--- a/Trabajos HTML/Ejercicio 03/index.html
+++ b/Trabajos HTML/Ejercicio 03/index.html
@@ -18,16 +18,16 @@
 Cada buscador y red social que sale en la lista deben ser links a las
  respectivas paginas-->
 
- <h1>Lista anidada de enlaces</h1>
+ <h1>Lista Desdordenada De Enlaces</h1>
 
-    <ul>
+    <ul type="square">
         <li>Buscadores</li>
-            <ul>
+            <ul type="disc">
                 <li><a href="https://www.google.com" target="_blank1">Google</a></li>
                 <li><a href="https://www.bing.com" target="_blank2">Buscador Bing</a></li>
             </ul>
         <li>Redes Sociales</li>
-            <ul>
+            <ul type="circle">
                 <li><a href="https://www.instagram.com" target="_blank3">Instagram</a></li>
                 <li><a href="https://www.twitter.com" target="_blank4">Twitter</a></li>
             </ul>
